--- a/UniversitySport/app/src/main/res/menu/drawer_view.xml
+++ b/UniversitySport/app/src/main/res/menu/drawer_view.xml
@@ -17,10 +17,10 @@
             <!--android:id="@+id/nav_approval"-->
             <!--android:icon="@drawable/nav_approval_selector"-->
             <!--android:title="审批" />-->
-        <!--<item-->
-            <!--android:id="@+id/nav_customer_service"-->
-            <!--android:icon="@drawable/nav_custom_service_selector"-->
-            <!--android:title="客服" />-->
+        <item
+            android:id="@+id/nav_customer_service"
+            android:icon="@drawable/nav_custom_service_selector"
+            android:title="客服" />
         <item
             android:id="@+id/nav_set"
             android:icon="@drawable/nav_sets_selector"
