修改了呼起小程序的appid，成功呼起

--- a/UniversitySport/app/src/main/res/layout/toolbar_main.xml
+++ b/UniversitySport/app/src/main/res/layout/toolbar_main.xml
@@ -57,7 +57,7 @@
         </FrameLayout>
 
         <FrameLayout
-            android:id="@+id/frTitleMenu"
+            android:id="@+id/flCustomerService"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="right"
